--- a/testapp/src/main/res/values/strings.xml
+++ b/testapp/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TestApp</string>
     <string name="no_items">There are no items in collection.</string>
+    <string name="footer">Example footer</string>
+    <string name="header">Example header</string>
 </resources>
